GR-Changing classes into records and adjusting integration tests